integrated log4j, add test logs to each test class

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
   <name>AutomationTestingFrameworkBuild</name>
   <url>http://maven.apache.org</url>
   <build>
+  	<resources>
+	  	<resource>
+	  		<directory>src/main/java/resources</directory>
+	  		<filtering>true</filtering>
+	  	</resource>
+ 	</resources>
   	<plugins>
   	  <plugin>
         <groupId>org.apache.maven.plugins</groupId>
